styled nav using flex box

--- a/great-idea/index.html
+++ b/great-idea/index.html
@@ -15,7 +15,8 @@
 </head>
 
   <body>
-
+<!--navigation bar + logo-->
+<header>
     <nav>  
       <div class ="links">
         <a href="#services">Services</a>
@@ -30,7 +31,9 @@
         <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
       </div>
   </nav>
-  
+</header>
+
+
   <div class="title-container">
     <div class="main-title">  
       <h1>Innovation<br>
