started css and flex box alignment

--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -34,8 +34,9 @@
 
 
 
-
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+  <div class="header-img">
+    <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+  </div>
 </header>
 
 
@@ -43,9 +44,11 @@
 <!--sections start here-->
 <section id="services">
   <div class="container">
-   <h3> Services</h3>
+    <div class="services">
+      <h3> Services</h3>
 
-    <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+      <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+    </div>
   </div>
 </section>
 
