--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,151 +1,156 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
 
-  <title>Great Idea!</title>
+  <head>
+    <meta charset="utf-8">
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <title>Great Idea!</title>
 
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
-</head>
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
 
-<body>
-<header>
-  <nav>
-    <div class="links">
-      <a href="#services">Services</a>
-      <a href="#product">Product</a>
-      <a href="#vision">Vision</a>
-      <a href="#features">Features</a>
-      <a href="#about">About</a>
-      <a href="#contact">Contact</a>
-    </div>
+    <!--[if lt IE 9]>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+    <![endif]-->
+  </head>
 
-    <div class="logo">
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    </div>
+  <body>
+    <div class="site-start">
+      <header>
+        <nav>
+          <div class="links">
+            <a href="#services">Services</a>
+            <a href="#product">Product</a>
+            <a href="#vision">Vision</a>
+            <a href="#features">Features</a>
+            <a href="#about">About</a>
+            <a href="#contact">Contact</a>
+          </div>
 
-  </nav>
+          <div class="logo">
+            <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+          </div>
+
+        </nav>
 
 
 
-  <div class="header-img">
-    <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+        <div class="header-img">
+          <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+        </div>
+      </header>
+
+
+
+      <!--sections start here-->
+      <div class="content">
+        <section id="services">
+          <div class="container">
+            <div class="services">
+              <h3> Services</h3>
+
+              <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
+            </div>
+          </div>
+        </section>
+          <hr>
+        <section id="digital-design-UX">
+          <div class="container">
+            <div class="digital-design">
+              <h3>Digital Design</h3>
+
+              <p> Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+              eleifend. Mauris euismod facilisis iaculis.</p>
+
+            <button> Learn More </button>
+          </div>
+          
+
+            <div class="UX-UI">
+
+              <h3>UX / UI</h3>
+
+              <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+                eleifend. Mauris euismod facilisis iaculis.</p>
+
+                <button>Learn More</button>
+            </div>
+          </div>
+        </section>
+
+
+        <section id="digital-marketing-WebDev">
+          <div class="container">
+            <div class="digital-marketing">
+              <h3>Digital Marketing</h3>
+
+            <p> Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+              eleifend. Mauris euismod facilisis iaculis.</p>
+
+            <button>Learn More</button> 
+            </div>
+
+            <div class="WebDev">
+              <h3>Web Development</h3>
+
+              <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+              eleifend. Mauris euismod facilisis iaculis.</p>
+
+              <button>Learn More</button>
+            </div>
+          </div>
+
+        </section>
+
+        <section id="IOS-android">
+          <div class="container">
+            <div class="IOS">
+            <h3> iOS Development</h3>
+
+            <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+              eleifend. Mauris euismod facilisis iaculis.</p>
+
+            <button>  Learn More</button>
+            </div>
+          
+            <div class="android">
+              <h3>Android Development</h3>
+
+              <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+              eleifend. Mauris euismod facilisis iaculis.</p>
+
+              <button>Learn More</button>
+            </div>
+          </div>
+        </section>
+        <hr>
+
+        <section id="services-facts">
+          <div class="container">
+            <div class="facts-text">
+              <h3> Some Facts About Our Services</h3>
+
+              <p> Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
+                eleifend. Mauris euismod facilisis iaculis.</p>
+
+              <ul>
+                <li>Awesome thing</li>
+                <li>Amazing thing</li>
+                <li>Cool thing</li> 
+                <li>Great thing</li> 
+              </ul>
+            </div>
+
+            <div class="facts-ing">
+              <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+            </div>
+          </div>
+        </section>
+        <footer>
+          Copyright Great Idea! 2018
+          </footer>
+      </div>
+    </body>
   </div>
-</header>
-
-
-
-<!--sections start here-->
-<section id="services">
-  <div class="container">
-    <div class="services">
-      <h3> Services</h3>
-
-      <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.</p>
-    </div>
-  </div>
-</section>
-
-<section id="digital-design-UX">
-  <div class="container">
-    <div class="digital-design">
-      <h3>Digital Design</h3>
-
-      <p> Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.</p>
-
-    <button> Learn More </button>
-   </div>
-  
-
-    <div class="UX-UI">
-
-      <h3>UX / UI</h3>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.</p>
-
-        <button>Learn More</button>
-    </div>
-  </div>
-</section>
-
-
-<section id="digital-marketing-WebDev">
-  <div class="container">
-    <div class="digital-marketing">
-      <h3>Digital Marketing</h3>
-
-     <p> Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.</p>
-
-     <button>Learn More</button> 
-    </div>
-
-    <div class="WebDev">
-      <h3>Web Development</h3>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <button>Learn More</button>
-    </div>
-  </div>
-
-</section>
-
-<section id="IOS-android">
-  <div class="container">
-    <div class="IOS">
-     <h3> iOS Development</h3>
-
-    <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.</p>
-
-    <button>  Learn More</button>
-    </div>
-  
-    <div class="android">
-      <h3>Android Development</h3>
-
-      <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-      eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <button>Learn More</button>
-    </div>
-  </div>
-</section>
-
-<section id="services-facts">
-  <div class="container">
-    <div class="facts-text">
-      <h3> Some Facts About Our Services</h3>
-
-      <p> Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-        eleifend. Mauris euismod facilisis iaculis.</p>
-
-      <ul>
-        <li>Awesome thing</li>
-        <li>Amazing thing</li>
-        <li>Cool thing</li> 
-        <li>Great thing</li> 
-      </ul>
-    </div>
-
-    <div class="facts-ing">
-      <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-    </div>
-  </div>
-</section>
-<footer>
-  Copyright Great Idea! 2018
-</footer>
-</body>
-
 </html>
